[gd_scene load_steps=13 format=3 uid="uid://cgphkol6xbg2"]

[ext_resource type="Script" uid="uid://oifg0g2g74m6" path="res://script/mainscreen.gd" id="1_ud66o"]
[ext_resource type="Texture2D" uid="uid://1bgjisk4ftx" path="res://sprites/aguapertodaboca.png" id="2_nscqb"]
[ext_resource type="Texture2D" uid="uid://uiksoacpjxt7" path="res://sprites/cenario sala dia.jpg" id="2_qxva6"]
[ext_resource type="Texture2D" uid="uid://gxuy3lkm1ol6" path="res://sprites/bebendo agua.png" id="3_fhmt4"]
[ext_resource type="Texture2D" uid="uid://bo6e1p22dgro5" path="res://sprites/boneco flex reto vetorizada2.png" id="3_n1vcb"]
[ext_resource type="Texture2D" uid="uid://das60a3lh311p" path="res://sprites/garrafa.png" id="3_nscqb"]
[ext_resource type="Texture2D" uid="uid://dfbfnddvdl8l" path="res://sprites/boneco flex vetorizada.png" id="4_bykbo"]
[ext_resource type="Texture2D" uid="uid://djjuc3w7fbjyr" path="res://sprites/icon.svg" id="6_fhmt4"]
[ext_resource type="Texture2D" uid="uid://dv1al4a11uwbv" path="res://sprites/shop.png" id="7_bwl8f"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yth3l"]
animations = [{
"frames": [{
"duration": 0.7,
"texture": ExtResource("3_n1vcb")
}, {
"duration": 0.7,
"texture": ExtResource("4_bykbo")
}],
"loop": false,
"name": &"flexao",
"speed": 2.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_58q0a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nscqb")
}, {
"duration": 1.0,
"texture": ExtResource("3_fhmt4")
}, {
"duration": 1.0,
"texture": ExtResource("3_fhmt4")
}, {
"duration": 1.0,
"texture": ExtResource("3_fhmt4")
}, {
"duration": 1.0,
"texture": ExtResource("3_fhmt4")
}, {
"duration": 1.0,
"texture": ExtResource("3_fhmt4")
}, {
"duration": 1.0,
"texture": ExtResource("3_fhmt4")
}, {
"duration": 1.0,
"texture": ExtResource("2_nscqb")
}],
"loop": false,
"name": &"beber",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ew27w"]

[node name="mainscreen" type="Node2D"]
script = ExtResource("1_ud66o")

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 4
visibility_layer = 4
offset_right = 7250.0
offset_bottom = 12740.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_qxva6")

[node name="player" type="AnimatedSprite2D" parent="."]
position = Vector2(366, 1111)
scale = Vector2(0.0546667, 0.0602222)
sprite_frames = SubResource("SpriteFrames_yth3l")
animation = &"flexao"

[node name="anima" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(366, 820)
scale = Vector2(0.54355, 0.461286)
sprite_frames = SubResource("SpriteFrames_58q0a")
animation = &"beber"

[node name="BarraClique" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 96.0
offset_top = 1258.0
offset_right = 641.0
offset_bottom = 1274.0
max_value = 10.0
show_percentage = false

[node name="rebirthlabel" type="Label" parent="."]
offset_left = 304.0
offset_top = 97.0
offset_right = 366.0
offset_bottom = 120.0
text = "Rebirth:"

[node name="nivellebal" type="Label" parent="."]
offset_left = 56.0
offset_top = 42.0
offset_right = 96.0
offset_bottom = 65.0
text = "Lvl:"

[node name="energylabel" type="Label" parent="."]
visible = false
offset_left = 287.0
offset_top = 19.0
offset_right = 340.0
offset_bottom = 42.0
text = "Energi:"

[node name="Explabel" type="Label" parent="."]
visible = false
offset_left = 264.0
offset_top = 97.0
offset_right = 304.0
offset_bottom = 120.0
text = "Exp:"

[node name="Moneylabel" type="Label" parent="."]
offset_left = 602.0
offset_top = 42.0
offset_right = 659.0
offset_bottom = 65.0
text = "Money:"

[node name="Contadorlabel" type="Label" parent="."]
visible = false
offset_left = 442.0
offset_top = 97.0
offset_right = 487.0
offset_bottom = 120.0
text = "CLick:"

[node name="loja" type="TextureButton" parent="."]
offset_left = 6.0
offset_top = 1014.0
offset_right = 2486.0
offset_bottom = 4522.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("7_bwl8f")

[node name="drinkButton" type="Button" parent="."]
offset_left = 602.0
offset_top = 922.0
offset_right = 1626.0
offset_bottom = 1946.0
scale = Vector2(0.1, 0.1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ew27w")
icon = ExtResource("3_nscqb")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="inactivity" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="energibar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 148.0
offset_top = 42.0
offset_right = 535.0
offset_bottom = 69.0
value = 100.0

[node name="barraexp" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 96.0
offset_top = 1250.0
offset_right = 641.0
offset_bottom = 1254.0
show_percentage = false

[node name="WaterSpray" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.6
one_shot = true
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 800)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
scale_amount_min = 3.0
scale_amount_max = 3.0

[node name="rebirthbut" type="Button" parent="."]
offset_left = 287.0
offset_top = 120.0
offset_right = 383.0
offset_bottom = 212.0
icon = ExtResource("6_fhmt4")

[connection signal="animation_finished" from="player" to="." method="_on_anima_animation_finished"]
[connection signal="animation_finished" from="anima" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="anima" to="." method="_on_animacap_animation_finished"]
[connection signal="pressed" from="loja" to="." method="_on_loja_pressed"]
[connection signal="pressed" from="drinkButton" to="." method="_on_drink_button_pressed"]
[connection signal="timeout" from="inactivity" to="." method="_on_inactivity_timeout"]
[connection signal="pressed" from="rebirthbut" to="." method="rebirt"]
